bin_PROGRAMS = qhub
qhub_CXXFLAGS = -Wall -DDEBUG -g -DCONFIGDIR=\"$(sysconfdir)/\"
qhub_LDFLAGS = -export-dynamic -rpath $(libdir) -lboost_program_options
qhub_SOURCES  = qhub.cpp MyTime.h types.h 
qhub_SOURCES += Util.h Util.cpp
qhub_SOURCES += Encoder.h Encoder.cpp TigerHash.h TigerHash.cpp
qhub_SOURCES += TokenBucket.h TokenBucket.cpp Socket.h
qhub_SOURCES += Socket.cpp ServerSocket.cpp ServerSocket.h
qhub_SOURCES += InterHub.cpp InterHub.h
qhub_SOURCES += Hub.h Hub.cpp ConnectionBase.h ConnectionBase.cpp
qhub_SOURCES += ADCSocket.h ADCSocket.cpp Client.h Client.cpp
qhub_SOURCES += UserInfo.h ADC.h ADC.cpp
qhub_SOURCES += Buffer.h Speaker.h id.h Singleton.h
qhub_SOURCES += compat_hash_map.h error.h Logs.h Logs.cpp
qhub_SOURCES += Plugin.h PluginManager.h PluginManager.cpp
qhub_SOURCES += UserData.h XmlTok.h XmlTok.cpp
qhub_SOURCES += Settings.h Settings.cpp
#qhub_SOURCES += Timer.h Timer.cpp DNSAdapter.h DNSAdapter.cpp 
qhub_SOURCES += Command.h Command.cpp
qhub_SOURCES += ClientManager.h ClientManager.cpp
qhub_SOURCES += ConnectionManager.h ConnectionManager.cpp
qhub_SOURCES += ServerManager.h ServerManager.cpp
qhub_SOURCES += EventManager.h EventManager.cpp
qhub_SOURCES += DnsManager.h DnsManager.cpp
