bin_PROGRAMS = qhub
qhub_CXXFLAGS = -Wall -Werror -DDEBUG -g -DCONFIGDIR=\"$(sysconfdir)/\"
qhub_LDFLAGS = -export-dynamic -rpath $(libdir) -lboost_program_options

qhub_SOURCES  = qhub.cpp compat_hashtable.h error.h id.h types.h
qhub_SOURCES += ADC.h ADC.cpp
qhub_SOURCES += ADCSocket.h ADCSocket.cpp
qhub_SOURCES += Buffer.h
qhub_SOURCES += Client.h Client.cpp
qhub_SOURCES += ClientManager.h ClientManager.cpp
qhub_SOURCES += Command.h Command.cpp
qhub_SOURCES += ConnectionBase.h ConnectionBase.cpp
qhub_SOURCES += ConnectionManager.h ConnectionManager.cpp
qhub_SOURCES += DnsManager.h DnsManager.cpp
qhub_SOURCES += Encoder.h Encoder.cpp
qhub_SOURCES += EventManager.h EventManager.cpp
qhub_SOURCES += Hub.h Hub.cpp
qhub_SOURCES += InterHub.h InterHub.cpp
qhub_SOURCES += Logs.h Logs.cpp
qhub_SOURCES += Plugin.h
qhub_SOURCES += PluginManager.h PluginManager.cpp
qhub_SOURCES += ServerManager.h ServerManager.cpp
qhub_SOURCES += ServerSocket.h ServerSocket.cpp
qhub_SOURCES += Settings.h Settings.cpp
qhub_SOURCES += Singleton.h
qhub_SOURCES += Socket.h Socket.cpp
qhub_SOURCES += TigerHash.h TigerHash.cpp
qhub_SOURCES += TokenBucket.h TokenBucket.cpp
qhub_SOURCES += UserData.h
qhub_SOURCES += UserInfo.h
qhub_SOURCES += Util.h Util.cpp
qhub_SOURCES += XmlTok.h XmlTok.cpp
qhub_SOURCES += ZBuffer.h ZBuffer.cpp
